<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="30sp"
        android:text="Settings"
        android:textAlignment="center"
        android:textSize="34sp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="30sp"
        android:text="Font size"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="140dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fontSizeSmallButton"
            android:onClick="onClickSmallSize"/>

        <RadioButton
            android:id="@+id/radioButtonOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fontSizeMeduimButton"
            android:onClick="onClickMediumSize"/>

        <RadioButton
            android:id="@+id/radioButtonOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fontSizeBigButton"
            android:onClick="onClickBigSize"/>

    </RadioGroup>


</LinearLayout>